# immersive-project-timer

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-collapsed.py  test-pin-detailed.py  test-pin.py  test-ui.py  test-unpin.py
.claude/: settings.local.json
scripts/: create-icon.cjs  create-icon.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: IconPicker.tsx  ProjectButton.tsx  ProjectEditor.tsx  SettingsModal.tsx  TimeLogView.tsx  TimerDisplay.tsx  Widget.tsx
src/hooks/: useMidnightReset.ts  useTimer.ts
src/stores/: projectStore.ts  timerStore.ts
src/utils/: csvExport.ts  timeLog.ts
