[package]
name = "immersive-project-timer"
version = "0.1.0"
description = "On-screen widget for project time tracking"
authors = ["you"]
edition = "2021"

[lib]
name = "immersive_project_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
